--- a/CustomizedHouse/bin/main/application.properties
+++ b/CustomizedHouse/bin/main/application.properties
@@ -7,6 +7,6 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.order=0spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.thymeleaf.mode=LEGACYHTML5
 
-spring.datasource.url=jdbc:mysql://localhost:3306/example?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/chouse?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=scoder
 spring.datasource.password=1004
