--- a/CustomizedHouse/build.gradle
+++ b/CustomizedHouse/build.gradle
@@ -19,6 +19,8 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.4.1'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
@@ -27,7 +29,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	compile 'org.projectlombok:lombok'
-	compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	compile 'com.h2database:h2'
 	compile 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
