--- a/CustomizedHouse/src/main/resources/application.yml
+++ b/CustomizedHouse/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/example?serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/chouse?serverTimezone=UTC&characterEncoding=UTF-8
     username: scoder
     password: 1004
 
