--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ build/classes/kr/or/bit/dto/SaleList.class
 /.metadata/
 /Project_Team4/
 /CustomizedHouse/bin/
+CustomizedHouse/.idea/
+CustomizedHouse/.gradle/6.0.1/executionHistory/executionHistory.bin
+CustomizedHouse/.gradle/
+CustomizedHouse/build/
