[#7] 공인중개사 회원가입 페이지 추가

--- a/CustomizedHouse/src/main/resources/application.yml
+++ b/CustomizedHouse/src/main/resources/application.yml
@@ -20,6 +20,9 @@ spring:
     mode: HTML5
     cache: false
     order: 0
+  devtools:
+    livereload:
+      enabled: true
 logging:
   level:
     org:
