--- a/CustomizedHouse/build.gradle
+++ b/CustomizedHouse/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	compile 'org.projectlombok:lombok'
 	compile 'com.h2database:h2'
 	compile 'mysql:mysql-connector-java'
+	//devtools
+	compile('org.springframework.boot:spring-boot-devtools')
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
