--- a/CustomizedHouse/src/main/resources/application.yml
+++ b/CustomizedHouse/src/main/resources/application.yml
@@ -33,4 +33,9 @@ logging:
               BasicBinder: TRACE
 server:
   port: 8000
-
+app:
+  upload:
+    dir: /reaImages
+multipart:
+  maxFileSize: 5MB
+  maxRequestSize: 5MB
