[#7] 공인중개사 회원가입 구현 중

--- a/CustomizedHouse/src/main/resources/application.yml
+++ b/CustomizedHouse/src/main/resources/application.yml
@@ -23,6 +23,10 @@ spring:
   devtools:
     livereload:
       enabled: true
+  servlet:
+    multipart:
+      maxFileSize: 100MB
+      maxRequestSize: 100MB
 logging:
   level:
     org:
@@ -37,6 +41,3 @@ server:
 app:
   upload:
     dir: /reaImages
-multipart:
-  maxFileSize: 5MB
-  maxRequestSize: 5MB
